[package]
name = "rust_http_server"
version = "0.1.0"
authors = ["hamadakafu <kafu.h1998@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bufstream = "0.1.4"
chrono = "0.4"
failure = "0.1.5"
log = "0.4.7"
env_logger = "0.6.2"
regex = "1.1.9"

